--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2595,6 +2595,7 @@ input, select, textarea {
 	}
 
 		.image img {
+			/* display: block; */
 		}
 
 		.image.left, .image.right {
@@ -2642,6 +2643,7 @@ input, select, textarea {
 			}
 
 			.image.main img {
+				width: 50%;
 			}
 
 		@media screen and (max-width: 736px) {
