--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2595,7 +2595,7 @@ input, select, textarea {
 	}
 
 		.image img {
-			/* display: block; */
+			display: block;
 		}
 
 		.image.left, .image.right {
